<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ramadan"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/ramadan" />
    <LinearLayout
        android:id="@+id/tv1"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ramadan">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fajr"
            android:fontFamily="@font/amelina"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timeFajr"
            android:fontFamily="@font/amelina"
             android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tv2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:visibility="invisible"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/duhr"
            android:fontFamily="@font/amelina"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_duhr"
            android:fontFamily="@font/amelina"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/tv3"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amelina"
            android:textStyle="bold"
            android:text="@string/asr"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timeasr"
            android:fontFamily="@font/amelina"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv4"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:visibility="invisible"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amelina"
            android:textStyle="bold"
            android:text="@string/magrib"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timemagrib"
            android:fontFamily="@font/amelina"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv5"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:visibility="invisible"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/isha"
            android:textColor="@color/black"
            android:fontFamily="@font/amelina"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ishatime"
            android:textAlignment="viewEnd"
            android:fontFamily="@font/amelina"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"

            />
    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ramadanText"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv5"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/animatedtext" />

</androidx.constraintlayout.motion.widget.MotionLayout>